# sdk-zephyr

boards/posix/nrf52_bsim/: nrf52_bsim.dts
boards/posix/nrf52_bsim/doc/: index.rst
drivers/flash/: soc_flash_nrf.c
include/zephyr/bluetooth/: conn.h
samples/bluetooth/direction_finding_central/boards/: nrf52833dk_nrf52833.conf
samples/bluetooth/direction_finding_central/src/: main.c
samples/bluetooth/direction_finding_peripheral/boards/: nrf52833dk_nrf52833.conf
samples/bluetooth/direction_finding_peripheral/src/: main.c
samples/bluetooth/test_aar_failure/: common.c  common.h
samples/bluetooth/test_aar_failure/dut/: CMakeLists.txt  dut.c  main.c  prj.conf
samples/bluetooth/test_aar_failure/tester/: CMakeLists.txt  main.c  tester.c
subsys/bluetooth/controller/: Kconfig
subsys/bluetooth/host/: Kconfig  adv.c  att.c  conn.c  gatt.c  hci_core.c  scan.c
tests/bsim/bluetooth/ll/edtt/test_app/: README.md  compile.sh  edtt_test_suite.py  test_with_edtt.sh  test_with_tca.py
tests/bsim/bluetooth/ll/edtt/test_app/target_app/: CMakeLists.txt  prj.conf
tests/bsim/bluetooth/ll/edtt/test_app/target_app/src/: main.c
